Cleanup (#3970)
* move array designators to the type

* use `Map.computeIfAbsent()` instead of `Map.get()` and `Map.containsKey()`

* remove explicit array creation and simply pass varargs

* replace anonymous inner class with lambda

* Potential fix for pull request finding

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot Autofix powered by AI <175728472+Copilot@users.noreply.github.com>
Co-authored-by: Jeremy Landis <jeremylandis@hotmail.com>